--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.username=root
+spring.datasource.password=admin123
 
+spring.datasource.url=jdbc:mysql://localhost:3306/todo
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=true
+server.servlet.context-path=/api
