--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.username=root
 spring.datasource.password=admin123
 
 spring.datasource.url=jdbc:mysql://localhost:3306/todo
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
